# Erratica

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
erratica/: __init__.py
erratica/cli/: benchmark.py  dashboard.py  demo.py  export.py  modelcard.py
erratica/engine/: __init__.py  feedback.py  memory.py  runner.py
erratica/learning/: __init__.py  evaluator.py  exporter.py  modelcard.py  patcher.py  promoter.py  replay.py  triage.py  weights.py
erratica/policy/: __init__.py  examples.py  prompt_rules.py
erratica/storage/: __init__.py  schema.sql
synora/: __init__.py
synora/cli/: dashboard.py  export.py  modelcard.py
synora/engine/: memory.py  runner.py
synora/learning/: exporter.py  modelcard.py  patcher.py  promoter.py  replay.py  triage.py  weights.py
synora/policy/: examples.py  prompt_rules.py
synora/storage/: db.py
tests/: test_erratica.py  test_synora.py
